@@ -7,7 +7,7 @@
 
 \section{\Rlogo CHANGES IN 4.0.0 patched}{
 
-   \subsection{NEW FEATURES}{
+  \subsection{NEW FEATURES}{
     \itemize{
       \item \code{paste()} and \code{paste0()} gain a new optional
       argument \code{recycle0}.  When set to true, zero-length
@@ -35,6 +35,10 @@
 
       \item Fix \code{parallel::mclapply(..., mc.preschedule=FALSE)}
       to handle raw vector results correctly. \PR{17779}
+
+      \item Computing the \code{base} value, i.e., 2, \dQuote{everywhere},
+      now uses \code{FLT_RADIX}, as the original \file{machar} code looped
+      indefinitely on the ppc64 architecture for the \code{longdouble} case.
     }
   }
 }
